# patient-demand-forecast

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: evaluate.rs  mod.rs  predict.rs  simulate.rs  train.rs
src/data/: features.rs  loader.rs  mod.rs
src/models/: gbm.rs  mod.rs
src/utils/: metrics.rs
