[package]
name = "er_forecast"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "er_forecast"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
chrono     = { version = "0.4", features = ["serde"] }
clap       = { version = "4.5", features = ["derive"] }
csv        = "1"
rand       = { version = "0.9", features = ["std_rng"] }
rand_distr = "0.5"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
